--- a/client/src/components/main/Main.module.css
+++ b/client/src/components/main/Main.module.css
@@ -16,7 +16,10 @@
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-    margin: 0 60px;
+    margin: 0 60px;  
+    background-color: rgb(194, 194, 194);
+    padding: 45px;
+    border-radius: 20px;
 }
 .cardTech {
     height: 350px !important;
@@ -27,13 +30,14 @@
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.123);
     border-radius: 10px;
     padding: 15px;
+    
 }
-
 .headerCard {
     font-family: "Bitter";
     font-weight: 600;
     font-size: 18px;
     margin-bottom: 2px;
+    
 }
 .buy {
     text-decoration: none;
@@ -77,6 +81,7 @@
     background-position: center center;
     border-radius: 5px;
     background-repeat: no-repeat;
+    background-color: #fff;
 }
 .cardTech:nth-last-child(1),
 .cardTech:nth-last-child(2),
@@ -88,12 +93,13 @@
     background-repeat: no-repeat;
 }
 #cardOne {
-    width: 250px;
+    width: 230px;
     height: 300px;
     background-size: 200px 200px;
     background-position: center center;
     border-radius: 5px;
     background-repeat: no-repeat;
+    
 }
 .line {
     width: 50%;
